# Master-Thesis

./: README.md  SSSP_Charts.ipynb
gunrock/examples/experiments/: CMakeLists.txt  sssp_cpu.hxx  sssp_parallel_cpu.cu
gunrock/examples/tools/: CMakeLists.txt
gunrock/examples/tools/network_info/: CMakeLists.txt  clustering_coefficient.hxx  network_info.cu
gunrock/examples/tools/random_network/: CMakeLists.txt  random_network.cu
gunrock/examples/tools/sssp_compare/: CMakeLists.txt  sssp_compare.cu  sssp_cpu.hxx  sssp_cpu_parallel.hxx
gunrock/examples/tools/sssp_frontier/: CMakeLists.txt  sssp_cpu.hxx  sssp_frontier.cu
gunrock/examples/tools/sssp_visited/: CMakeLists.txt  sssp_cpu.hxx  sssp_visited.cu
gunrock/include/gunrock/algorithms/: sssp_frontier.hxx
gunrock/include/gunrock/formats/: csc.hxx  csr.hxx
scripts/: add_random_weight.py  download_dataset.py  execution_times.py  fix_dataset.py  frontier_data.py  frontier_stats.py  fully_connected.py  generate_network_info.py  generate_random_network.py  generate_random_network_variance.py  mtx_to_csr.py  stats_datasets.py  unzip.py  visited_neigh.py
scripts/lists/: dataset_list.txt  dimacs10_list.txt  mesh_list.txt  random_list.txt  variance_list.txt
stats/: dimacs10_stats.csv  mesh_stats.csv  random_stats.csv  variance_stats.csv
stats/frontiers/: mesh_frontiers.csv  random_frontiers.csv
