# begin /* Add tools' subdirectories */
add_subdirectory(cmd)
add_subdirectory(csr_binary)
add_subdirectory(nearest_neighbor)
add_subdirectory(network_info)
add_subdirectory(random_network)
add_subdirectory(sssp_compare)
add_subdirectory(sssp_visited)
add_subdirectory(sssp_frontier)
# end /* Add tools' subdirectories */
